# RayFronts

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  compile.sh  environment.yml
docker/: desktop.Dockerfile  jetson.Dockerfile
experiments/: README.md
experiments/patches/: concept_graphs.patch  hovsg.patch
experiments/semseg_configs/: replica_conceptfusion.yaml  replica_concpgr.yaml  replica_naclip.yaml  replica_naradio.yaml  replica_trident.yaml  scannet_conceptfusion.yaml  scannet_concpgr.yaml  scannet_naclip.yaml  scannet_naradio.yaml  scannet_trident.yaml  tartanair_conceptfusion.yaml  tartanair_naclip.yaml  tartanair_naradio.yaml  tartanair_trident.yaml
experiments/srchvol_configs/: base.yaml  rayfronts_0.yaml  rayfronts_10.yaml  rayfronts_20.yaml  sempose_0.yaml  spherical_semfronts_10.yaml  spherical_semfronts_20.yaml  unidir_semfronts_10.yaml  unidir_semfronts_20.yaml
experiments/tartanground_labels/: AbandonedCableDay_seg_label_clean.json  ConstructionSiteOvercast_seg_label_clean.json  Downtown_seg_label_clean.json  Factory_seg_label_clean.json
rayfronts/: __init__.py  geometry3d.py  mapping_server.py  ros_utils.py  utils.py
rayfronts/configs/: README.md  default.yaml
rayfronts/csrc/: CMakeLists.txt  README.md
rayfronts/csrc/mapping/: vdb_mapping.cpp
rayfronts/datasets/: README.md  __init__.py  base.py  replica.py  ros.py  scannet.py  tartanair.py
scripts/: README.md  encoder_semseg_app.py  eval_utils.py  fit_feat_compressor.py  get_pca_basis.py  ros2npy.py  semseg_eval.py  srchvol_eval.py  summarize_srchvol_eval.py
(+61 files in other folders)
